feat: Use upx to reduce the binary size

--- a/Dockerfile.scratch
+++ b/Dockerfile.scratch
@@ -4,7 +4,7 @@ FROM golang:1.24.5-alpine AS builder
 WORKDIR /app
 
 # Install build tools and SQLite3 development files
-RUN apk add --no-cache build-base musl-dev sqlite-dev
+RUN apk add --no-cache build-base musl-dev sqlite-dev upx
 
 COPY db/ db/
 COPY routes/ routes/
@@ -17,6 +17,8 @@ RUN go mod tidy
 
 # Build the Go app (static binary)
 RUN CGO_ENABLED=1 CC=gcc go build -tags 'sqlite_omit_load_extension' -ldflags '-linkmode external -extldflags "-static"' -o main .
+
+RUN upx --best --lzma main
 
 # --- Final Stage: Copy only the statically-linked binary to scratch ---
 FROM scratch
